# cpp_cmake_gdb_practice

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  note.md  vcpkg.json
src/: index.cpp  index.h  main.cpp  note.md
test/: test.cpp
